Feat: add validator and update docs
