# app/models/content_model.go
@@ -9,10 +9,18 @@ const (
 )
 
 type ContentRequest struct {
-	Username string   `json:"username"`
-	Lang     Language `json:"lang"`
+	Username string   `json:"username" validate:"required,min=6,max=32"`
+	Lang     Language `json:"lang" validate:"required,oneof=auto id en"`
 }
 
 type ContentResponse struct {
 	GeneratedContent string `json:"generated_content"`
+}
+
+type ContentResponseSuccess struct {
+	Data ContentResponse `json:"data"`
+}
+
+type ContentResponseFailure struct {
+	Error string `json:"error"`
 }
